--- a/action.yml
+++ b/action.yml
@@ -32,8 +32,4 @@ runs:
   steps:
   - name: Cleanse images from Azure Container Registry
     shell: pwsh
-    run: $PSScriptRoot/AcrCleanupScript.ps1 -ContainerRegistry ${{ inputs.container-registry }} `
-        -Repository ${{ inputs.repo }} `
-        -Strictness ${{ inputs.strictness }} `
-        -TagToKeep ${{ inputs.tag }} `
-        -NumberImagesToKeep ${{ inputs.number-to-keep }}
+    run: ./AcrCleanupScript.ps1 -ContainerRegistry ${{ inputs.container-registry }} -Repository ${{ inputs.repo }} -Strictness ${{ inputs.strictness }} -TagToKeep ${{ inputs.tag }} -NumberImagesToKeep ${{ inputs.number-to-keep }}
