--- a/action.yml
+++ b/action.yml
@@ -44,7 +44,7 @@ runs:
 
   - name: Show tree
     shell: bash
-    run: tree /home
+    run: tree /home/bin
 
   - name: Cleanse images from Azure Container Registry
     shell: pwsh
